# VST3-Plugin-Steinberg-SDK

./: .gitignore  LICENSE  README.md
MyVST3Plugin/: CMakeLists.txt
MyVST3Plugin/resource/: plugin.uidesc
MyVST3Plugin/source/: plugincontroller.cpp  plugincontroller.h  pluginfactory.cpp  pluginids.h  pluginprocessor.cpp  pluginprocessor.h  version.h
